feat: Añadir endpoint cargue-masivo/auditorias/plantilla que devuelve plantilla con carga dinámica de dominios udistrital/sisifo_documentacion#523
