# swagger/swagger.yaml
@@ -151,6 +151,18 @@ paths:
           description: No encontrado.
       summary: Obtener auditor por ID
       tags: *ref_2
+  /cargue-masivo/auditorias/plantilla:
+    get:
+      operationId: CargueMasivoController_descargarPlantillaAuditorias
+      parameters: []
+      responses:
+        '200':
+          description: Plantilla descargada exitosamente.
+        '500':
+          description: Error interno.
+      summary: Descargar plantilla de auditorías
+      tags: &ref_3
+        - Cargue Masivo
   /cargue-masivo/auditorias:
     post:
       operationId: CargueMasivoController_cargueMasivo
@@ -180,8 +192,7 @@ paths:
         '500':
           description: Error interno.
       summary: Carga masiva de auditorías
-      tags: &ref_3
-        - Cargue Masivo
+      tags: *ref_3
   /cargue-masivo/actividades:
     post:
       operationId: CargueMasivoController_cargueMasivoActividades
